chore(npm): add files property to package.json

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "devDependencies": {
     "prettier": "^1.9.2"
   },
+  "files": [
+    "types"
+  ],
   "prettier": {
     "singleQuote": true,
     "trailingComma": "all",
