feat(npm): add repository property

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lua-types",
   "version": "1.0.0",
   "description": "TypeScript definitions for Lua 5.3 standard library.",
+  "repository": "https://github.com/ark120202/lua-types.git",
   "author": "ark120202",
   "license": "MIT",
   "scripts": {
