--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "lua-types",
+  "name": "types-lua",
   "version": "1.0.1",
   "description": "TypeScript definitions for Lua 5.3 standard library.",
-  "repository": "https://github.com/ark120202/lua-types.git",
+  "repository": "https://github.com/ark120202/types-lua.git",
   "author": "ark120202",
   "license": "MIT",
   "scripts": {
