--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "types-lua",
   "version": "1.0.1",
-  "description": "TypeScript definitions for Lua 5.3 standard library.",
+  "description": "TypeScript definitions for Lua standard library.",
   "repository": "https://github.com/ark120202/types-lua.git",
   "author": "ark120202",
   "license": "MIT",
   "scripts": {
-    "lint": "prettier types/**/*.ts -l"
+    "lint": "prettier **/*.d.ts -l"
   },
   "devDependencies": {
     "prettier": "^1.9.2"
   },
   "files": [
-    "types"
+    "core",
+    "extra",
+    "*.d.ts"
   ],
   "prettier": {
     "singleQuote": true,
