--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "trailingComma": "all"
   },
   "devDependencies": {
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "typescript-to-lua": "^0.22.1"
   }
 }
