--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "author": "ark120202",
   "files": [
-    "**/*.d.ts"
+    "**/*.d.ts",
+    "tsconfig.json"
   ],
   "scripts": {
     "build": "tstl",
