--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.34",
+    "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "prettier": "^2.0.5",
     "ts-jest": "^26.5.3",
