--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
-  "name": "lua-types",
-  "version": "2.8.0",
-  "description": "TypeScript definitions for Lua standard library",
-  "keywords": [
-    "lua",
-    "typescript",
-    "tstl"
-  ],
-  "repository": "https://github.com/ark120202/lua-types",
-  "license": "MIT",
-  "author": "ark120202",
-  "files": [
-    "**/*.d.ts"
-  ],
-  "scripts": {
-    "lint": "prettier --check ."
-  },
-  "prettier": {
-    "printWidth": 100,
-    "proseWrap": "never",
-    "singleQuote": true,
-    "trailingComma": "all"
-  },
-  "devDependencies": {
-    "prettier": "^2.0.5",
-    "typescript-to-lua": "^0.32.2"
-  }
+    "name": "lua-types",
+    "version": "2.8.0",
+    "description": "TypeScript definitions for Lua standard library",
+    "keywords": [
+        "lua",
+        "typescript",
+        "tstl"
+    ],
+    "repository": "https://github.com/ark120202/lua-types",
+    "license": "MIT",
+    "author": "ark120202",
+    "files": [
+        "**/*.d.ts"
+    ],
+    "scripts": {
+        "lint": "prettier --check .",
+        "test": "jest"
+    },
+    "prettier": {
+        "printWidth": 100,
+        "tabWidth": 4,
+        "proseWrap": "never",
+        "singleQuote": true
+    },
+    "devDependencies": {
+        "@types/jest": "^26.0.20",
+        "@types/node": "^14.14.34",
+        "jest": "^26.6.3",
+        "jest-circus": "^26.6.3",
+        "prettier": "^2.0.5",
+        "ts-jest": "^26.5.3",
+        "typescript-to-lua": "^0.32.2"
+    }
 }
