--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
         "prettier": "^2.0.5",
-        "ts-jest": "^26.5.3",
-        "typescript-to-lua": "^0.32.2"
+        "ts-jest": "^26.5.3"
     }
 }
