--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "license": "MIT",
     "author": "ark120202",
     "files": [
-        "**/*.d.ts"
+        "**/*.d.ts",
+        "tsconfig.json"
     ],
     "scripts": {
-        "lint": "prettier --check .",
-        "test": "jest"
+        "test": "jest",
+        "lint": "prettier --check ."
     },
     "prettier": {
         "printWidth": 100,
@@ -23,13 +24,15 @@
         "proseWrap": "never",
         "singleQuote": true
     },
+    "dependencies": {
+        "typescript-to-lua": "^0.39.0"
+    },
     "devDependencies": {
         "@types/jest": "^26.0.20",
         "@types/node": "^14.14.34",
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
         "prettier": "^2.0.5",
-        "ts-jest": "^26.5.3",
-        "typescript-to-lua": "^0.32.2"
+        "ts-jest": "^26.5.3"
     }
 }
