--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
                   node-version: 12.13.1
                   registry-url: 'https://registry.npmjs.org'
             - run: npm ci
-            - run: npm run build
+            - run: npm test
             - run: npm publish
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
