Ignore test project lua

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "**/*.d.ts"
     ],
     "scripts": {
-        "test": "jest && npm run test:project",
-        "test:project": "npm --prefix test/testproject ci && npm --prefix test/testproject run build",
+        "test": "jest && npm run test:test-project",
+        "test:test-project": "npm --prefix test/testproject ci && npm --prefix test/testproject run build",
         "lint": "prettier --check ."
     },
     "prettier": {
